--- a/portfolio/src/Components/Introduction/Introduction.scss
+++ b/portfolio/src/Components/Introduction/Introduction.scss
@@ -34,7 +34,7 @@
     border-radius: 5px;
     background-color: #333;
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 300;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
