--- a/portfolio/src/Components/Skills/Skills.scss
+++ b/portfolio/src/Components/Skills/Skills.scss
@@ -46,12 +46,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
-    min-width: 100px;
+    width: 150px;
     height: 50px;
     transition: all 0.3s ease-in-out;
     font-size: 1rem;
